# sjs4_Trending

sjs4_trending/: CMakeLists.txt  README.txt
sjs4_trending/src/: CMakeLists.txt  bool.h  dlist.c  dlist.h  main.c  trending.c  trending.h  wordcounting.c  wordcounting.h
sjs4_trending/startFiles/: 09232014_all.txt  09242014_all.txt  09262014_all.txt  09272014_all.txt  09282014_all.txt  09292014_all.txt  09302014_all.txt  10012014_all.txt  123.txt  456.txt
